<resources>
    <string name="app_name">UGuessMerchant</string>
    <string name="action_settings">Settings</string>
    <string name="tip_square_hot">猜神</string>
    <string name="tip_square_topic">话题</string>
    <string name="main_title">优猜</string>
    <string name="network_is_unavailable">请保障网络畅通！</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_user_name">输入帐号</string>
    <string name="hint_pwd">输入密码</string>
    <string name="text_login">登录</string>
    <string name="text_code">券码</string>
    <string name="title_activity_write_off">WriteOffActivity</string>
    <string name="title_activity_ticket_detail">TicketDetailActivity</string>
    <string name="text_ticket_name">券名</string>
    <string name="text_ticket_content">优惠内容</string>
    <string name="text_deadline">使用截止时间</string>
    <string name="text_status">状态</string>
    <string name="text_use">立即使用</string>
    <string name="text_status_useful">可使用</string>
    <string name="text_status_used">已使用</string>
    <string name="text_status_expired">已过期</string>
    <string name="text_not_found">不存在</string>
    <string name="warning_empty_account">请输入用户名</string>
    <string name="warning_empty_pwd">请输入密码</string>
    <string name="tip_user_password_wrong">密码错误</string>
    <string name="tip_user_login_fail">登录失败</string>
    <string name="tip_user_name_not_exist">用户名不存在</string>
    <string name="warning_cannt_rec_barcode">无法识别此二维码</string>
    <string name="warning_invalid">无效</string>
    <string name="ticket_not_exist">券码有误请核对</string>
    <string name="ticket_no_permision">此券码不可核销</string>
    <string name="title_activity_ticket_used">TicketUsedActivity</string>
    <string name="info_ticket_use_success">券码已成功使用</string>
    <string name="text_return_to_scan">返回到扫码</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="text_enter">进  入</string>


</resources>
