<!--
  ~ /*
  ~   Copyright(c) 2015, QuCai8, Inc. All rights reserved.
  ~   This software is the confidential and proprietary information of QuCai8, Inc.
  ~   You shall not disclose such Confidential Information and shall use it only in
  ~   accordance with the terms of the license agreement you entered into with QuCai8.
  ~  */
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="uguess.qucai.com.merchant.business.main.ui.TicketDetailActivity">
    <uguess.qucai.com.merchant.business.common.component.QCActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_code"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_code"
                android:textColor="@color/lable_color"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textview_ticket_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1234 1235 2232 2335"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:gravity="center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:paddingRight="@dimen/margin_10dp"
        android:background="@drawable/shape_common_input_container">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ticket_name"
                style="@style/Label"/>
            <TextView
                android:id="@+id/tv_ticket_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:textColor="@color/text_color"
                android:text="优惠券"
                android:gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_common_input_container">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ticket_content"
                style="@style/Label"/>
            <TextView
                android:id="@+id/tv_ticket_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:textColor="@color/text_color"
                android:text="优惠券"
                android:gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_common_input_container">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_deadline"
                style="@style/Label"/>
            <TextView
                android:id="@+id/tv_ticket_deadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:textColor="@color/text_color"
                android:text="优惠券"
                android:gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_common_input_container">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_status"
                style="@style/Label"/>
            <TextView
                android:id="@+id/tv_ticket_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Label"
                android:textColor="@color/text_color"
                android:text="优惠券"
                android:gravity="right"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:onClick="useTicket"
        android:textColor="@color/white"
        android:text="@string/text_use"
        android:textSize="@dimen/text_20sp"
        android:background="@drawable/selector_login_btn_bg"/>

</LinearLayout>
