<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright(c) 2015, QuCai, Inc. All rights reserved.
  ~ This software is the confidential and proprietary information of QuCai, Inc.
  ~ You shall not disclose such Confidential Information and shall use it only in
  ~ accordance with the terms of the license agreement you entered into with QuCai.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/system_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_25dp"
            android:background="@color/bg_login"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/action_bar_root"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_action_bar_height_48dp"
            android:layout_weight="3"
            android:background="@color/bg_login">

            <LinearLayout
                android:id="@+id/iconLinear"
                android:layout_width="@dimen/common_action_bar_height_48dp"
                android:layout_height="@dimen/common_action_bar_height_48dp"
                android:background="@drawable/selector_common_round_btn"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bar_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_bar_personal_btn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/titleLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/title_square_layout"
                    android:layout_width="145dp"
                    android:layout_height="@dimen/margin_28dp"
                    android:background="@drawable/shape_square_root_bar"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/title_white_block"
                        android:layout_width="78dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/shape_square_hot_bar_button" />

                    <TextView
                        android:id="@+id/title_bar_hot"
                        android:layout_width="@dimen/height_70dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@color/all_transparent"
                        android:gravity="center"
                        android:text="@string/tip_square_hot"
                        android:textColor="@color/main"
                        android:textSize="@dimen/text_13sp" />

                    <TextView
                        android:id="@+id/title_bar_topic"
                        android:layout_width="@dimen/height_70dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/all_transparent"
                        android:gravity="center"
                        android:text="@string/tip_square_topic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_13sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/title_others_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/main_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20sp" />

                    <EditText
                        android:id="@+id/group_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:text="@string/main_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_20sp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:src="@drawable/ic_user_group_edit"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/operatorLinear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/selector_common_round_btn"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bar_right"
                    android:layout_width="@dimen/common_action_bar_height_48dp"
                    android:layout_height="@dimen/common_action_bar_height_48dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_common_confirm"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/notify_system_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_25dp"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/mLyout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></RelativeLayout>
    </LinearLayout>
</FrameLayout>